# core-server

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.github/: pull_request_template.md
.github/workflows/: build.yml  flake8.yml  test.yml
analysis_module/: admin.py  mock_templates.py  mockserver.py  models.py  serializers.py  tasks.py  utils.py  views.py
analysis_module/migrations/: 0001_initial.py  0002_analysismodulerequest_request_params.py  0003_alter_analysismodulerequest_status.py  0003_analysismodulerequest_error_and_more.py  0004_remove_analysismodulerequest_error.py  0005_alter_analysismodulerequest_result_s3_link.py  0006_alter_analysismodulerequest_type.py  0007_analysismodulerequest_created_at_and_more.py  0008_remove_failedcallback_created_by_and_more.py
analysis_module/tests/: test_apis.py  test_tasks.py
analysis_module/views/: analysis_module.py  entry_extraction.py  entry_extraction_v2.py  models_info.py  predictions.py  predictions_v2.py  text_extraction.py
core/: admin.py  models.py  serializers.py  tasks.py  views.py
core_server/: asgi.py  base_models.py  base_test.py  celery.py  env.py  exception_handler.py  settings.py  storage_backends.py  tasks_settings.py  urls.py  wsgi.py
deduplication/: consts.py  models.py  serializers.py  utils.py  views.py
monitoring_scripts/: featuredrift.py  model_performance.py
scripts/: run_dev.sh  run_prod.sh  run_prod_ecs.sh
utils/: core.py  db.py  decorators.py  transformations.py
(+98 files in other folders)
