[tool.poetry]
name = "core-server"
version = "0.1.0"
description = "Server for DEEP NLP"
authors = ["Bibek Pandey <bewakepandey@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.6"
Django = "^4.1.1"
celery = "^5.2.7"
redis = "^4.3.4"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest = "^7.2.0"
coverage = "^6.5.0"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.1"
datasketch = "^1.5.8"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
gunicorn = "^20.1.0"
requests = "^2.28.1"
boto3 = "^1.26.23"
evidently = "^0.2.1"
numpy = "^1.23.5"
tqdm = "^4.64.1"
scikit-learn = "^1.1.3"
sentry-sdk = "^1.19.1"
django-storages = "^1.13.2"
pydantic = "^2.9.2"
langchain-community = "^0.3.3"
langchain-core = "^0.3.19"
langchain-openai = "^0.2.3"
langchain-aws = "^0.2.7"


[tool.poetry.dev-dependencies]
ipython = "*"
mypy = "^0.990"
django-stubs = "^1.13.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
